[package]
name = "market-prediction"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
ndarray = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
approx = "0.5"

[dev-dependencies]
mockall = "0.13"
tempfile = "3.10"
