[package]
name = "two_sigma_financial_modeling"
version = "0.1.0"
edition = "2024"

[dependencies]
approx = "0.5.1"
clap = { version = "4.5.60", features = ["derive"] }
csv = "1.4.0"
linreg = "0.2.0"
mockall = "0.14.0"
ndarray = "0.17.2"
rand = "0.10.0"
rstest = "0.26.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
