[tool.poetry]
name = "two_sigma_news"
version = "0.1.0"
description = "Two Sigma: Using News to Predict Stock Movements solution"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "two_sigma_news", from = "src"}]

[tool.poetry.dependencies]
python = "^3.13"
pandas = "^2.2.0"
numpy = "^1.26.0"
scikit-learn = "^1.4.0"
click = "^8.1.0"
scipy = "^1.12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
mock = "^5.1.0"

[tool.poetry.scripts]
two-sigma-news = "two_sigma_news.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
