[package]
name = "two_sigma_news"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
ndarray = "0.15"
ndarray-stats = "0.5"
itertools = "0.12"
chrono = "0.4"

[dev-dependencies]
mockall = "0.12"
tempfile = "3.8"
